# benchctl

./: .gitignore  README.md  benchctl.toml.sample  flake.nix  plan.md  pyproject.toml
src/benchctl/: __init__.py  bootctl.py  cli.py  clock.py  config.py  device.py  errors.py  orchestrator.py  ota.py  uart.py  uartfs.py
src/benchctl/power/: __init__.py  base.py  shelly.py  tasmota.py  uhubctl.py
src/benchctl/sim/: __init__.py  fake_device.py  fake_power.py  fake_uart.py  fake_uartfs.py
tests/: support.py
tests/integration/: test_acceptance.py
tests/unit/: test_bootctl.py  test_cli_smoke.py  test_config.py  test_device.py  test_orchestrator.py  test_orchestrator_uartfs.py  test_ota.py  test_power.py  test_sim.py  test_sim_uartfs.py  test_uart.py  test_uartfs.py
